@startuml

Serie --> Actor
Serie --> Season
Episode <- Season
Actor -> Credits


'-----------SEASON-----------'
class Season {
    int id
    String airDate
    String name
    String overview
    String posterPath
    int seasonNumber
    int episodeCount
    List<Episode> episodes
}

class Episode {
    int id
    int showId
    String name
    String overview
    String airDate
    int episodeNumber
    int seasonNumber
    String stillPath
    float voteAverage
}

'-----------SERIES-----------'
class Serie {
    int id
    String name
    String firstAirDate
    String posterPath
    String status
    int episodeRunTime
    String originCountry
    String overview
    List<Season> seasons
    List<Actor> actors
    String[] genre
    String[] network
    String[] externalIds
}


'-----------PERSONAS-----------'

class Actor {
    String name
    String birthday
    String deathday
    String biography
    String homepage
    String[] externalIds
    List<Credits> credits
}


class Credits {
    int id
    String name
    String character
    String posterPath
    String firstAirDate
}

@enduml